# GPGPU

./: .dockerignore  .gitignore  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  gpu_usage.csv  launch.sh  launch.vs.json  new.ncu-rep  out.txt  profiling.txt  ram_usage.csv  shell.nix  vram_usage.csv
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
dataset/: output.avi
include/: color-helper.hh  frame-helper.cuh  frame-helper.hh  logger.hh  segmentation-helper.cuh  segmentation-helper.hh  texture-helper.hh  video-processor.hh  webcam-processor.hh
profiling/: display_graph.py  profiling.ps1  profiling.py
src/: CMakeLists.txt
src/cpu/: CMakeLists.txt  color-helper.cc  frame-helper.cc  logger.cc  main.cc  segmentation-helper.cc  texture-helper.cc  video-processor.cc  webcam-processor.cc
src/gpu/: CMakeLists.txt  frame-helper.cu  kernel.cu  segmentation-helper.cu
src/stats/: CMakeLists.txt  rss.hh
